2012-11-16  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #11741]
	* libio/fileops.c (_IO_new_file_write): Correctly return error.
	(_IO_new_file_xsputn): Also return EOF if none of the input
	data was written when overflow failed.
	* libio/iopadn.c (_IO_padn): Likewise.
	* libio/iowpadn.c (_IO_wpadn): Likewise.
	* stdio-common/tst-put-error.c: Add copyright notice.
	(do_test): Add case for printing padded string.
	* stdio-common/vfprintf [!COMPILE_WPRINTF] (PAD): Flag error if
	_IO_padn returned error.
	[COMPILE_WPRINTF] (PAD): Flag error if _IO_wpadn returned error.
	* libio/libioP.h (_IO_xsputn_t): Note in comment that xsputn can
	return EOF.

2012-11-16  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* libio/libioP.h: Add comment note that the references to C++
	bits are now obsolete.

2012-11-15  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* math/libm-test.inc (check_complex): Use asprintf.

2012-11-14  Joseph Myers  <joseph@codesourcery.com>

	* debug/pcprofiledump.c (print_version): Update copyright year.
	* malloc/memusagestat.c (print_version): Likewise.

2012-11-14  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14831]
	* elf/Makefile (tests): Add tst-audit8.
	($(objpfx)tst-audit8): Also depend on $(common-objpfx)math/libm.so.
	($(objpfx)tst-audit8.out): New target.
	(tst-audit8-ENV): New variable.
	* elf/dl-runtime.c (_dl_profile_fixup): Call _dl_fixup to skip
	audit if l_reloc_result is NULL.
	(ELF_MACHINE_RUNTIME_FIXUP_PARAMS): Issue an error if it isn't
	defined and ELF_MACHINE_RUNTIME_FIXUP_ARGS is defined.
	* elf/tst-audit8.c: New file.

2012-11-14  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* io/Makefile (CFLAGS-open.c, CFLAGS-open64.c): Define.
	* misc/Makefile (CFLAGS-select.c): Define.
	* posix/Makefile (CFLAGS-pause.c): Define.

2012-11-13  David S. Miller  <davem@davemloft.net>

	* crypt/Makefile: Move test targets after toplevel Rules
	inclusion.  Grab any necessary sysdep routines when linking.